--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
           </div>
         </div>
         <div class="product__buttons">
-          <button>I confirm and pay</button>
+          <!-- <button id="pay">
+            <span></span>
+          </button> -->
+          <button id="pay">I confirm and pay</button>
           <button>Cancel order</button>
         </div>
       </div>
@@ -66,6 +69,7 @@
 
   <script type="module" src="/src/global-scripts/main.js"></script>
   <!-- <script type="module" src="/src/pages/home-page/scripts/home-page.js"></script> -->
+  <script type="module" src="./src/pages/home-page/scripts/spinner.module.js"></script>
 </body>
 
 </html>
