--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>INVO Academy JS Starter with Vite</title>
+  <title>Nike Summary Order</title>
 </head>
 
 <!-- In order to start your challenge, remove all the content inside <div id="home-page"></div> and start coding :) -->
